--- a/about.html
+++ b/about.html
@@ -1,12 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>who we are</title>
+    <link rel="icon" href="images/dp-mini.png">
 </head>
+
 <body>
-    
+    <header>
+        <nav>
+            <div class="navbar-main">
+                <div class="logo">
+                    <a href="index.html"> <img src="images/dp-big-logo1.png" alt="logo" /></a>
+                </div>
+                <div class="button">
+                    <ul class="button-container">
+                        <li><a href="index.html">visit homepage</a></li>
+                        <li><a href="about.html">read about us</a></li>
+                    </ul>
+                    <div class="action" onclick="actionToggle();">
+                        <span>+</span>
+
+                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">read about</li> -->
+                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on
+                                GitHub</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on
+                                Instagram</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on
+                                Codepen</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on
+                                Linkedin</li> -->
+                    </div>
+                </div>
+            </div>
+        </nav>
+    </header>
+    <main>
+        <section>
+            <div class="about-section">
+                <div class="about-heading-container">
+                    <h1>And there is something about us</h1>
+                </div>
+                <div class="text-container">
+                    <div class="box-1">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+                    </div>
+                    <div class="box-2">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+                    </div>
+                    <div class="box-3">
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Officiis, similique nesciunt sequi rerum ipsam deleniti libero optio voluptatem quos consequuntur? Nulla adipisci quas veritatis id officia iste magnam asperiores velit?</p>
+                    </div>
+                </div>
+            </div>
+            <div class="contact-section">
+                <div class="contact-container">
+                    <div class="form-heading">
+                        <h2>Place your thought here</h2>
+                    </div>
+                    <div class="form-container">
+                        <form>
+                            <ul class="contact-input-container">
+                                <li>
+                                    <!-- <label>Full Name <span class="required">*</span></label> -->
+                                    <input type="text" name="name-first" class="name-input" placeholder="First name" />
+                                    <input type="text" name="name-last" class="name-input" placeholder="Last name" /></li>
+                                <li>
+                                    <!-- <label>Email  <span class="required">*</span> </label> -->
+                                    <input type="email" name="email" class="input-email" placeholder="Email" />
+                                </li>
+
+                                <li>
+                                    <!-- <label>Your Message <span class="required">*</span> </label> -->
+                                    <textarea name="message" class="input-message" placeholder="Abc"></textarea>
+                                </li>
+                                <!-- <li>
+                                     <label>Subject</label><select name="subject" class="input-subject-selector">    
+                                        <optgroup label="Choose email subject">
+                                            <option value="Question">Question</option>
+                                            <option value="Report">Bug Report</option>
+                                            <option value="Partnership">Partnership</option>
+                                            <option value="Other">Other</option>
+                                        </optgroup>                            
+                                        
+                                        </select>
+                                </li>  -->
+                                <!-- <button>Submit form</button>  style="vertical-align:middle"-->
+
+                                <button class="button"><span>Submit</span></button>
+                            </ul>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
+    <footer>
+        <div class="footer-main">
+            <div class="footer-text-container">
+                <div>
+                    <p>Made by David Pitra</p>
+                </div>
+                <div>
+                    <p>© 2022 - <span>All rights reserved</span> </p>
+                </div>
+            </div>
+        </div>
+    </footer>
+    <!-- Optional JavaScript; choose one of the two! -->
+
+    <!-- Option 1: Bootstrap Bundle with Popper -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="./scripts/index.js"></script>
+    <!-- Option 2: Separate Popper and Bootstrap JS -->
+    <!--
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
+    -->
 </body>
+
 </html>
