--- a/index.html
+++ b/index.html
@@ -1,80 +1,152 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link rel="stylesheet" href="styles/style.css">
-    <title>document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous" />
+    <link rel="stylesheet" href="styles/style.css" />
+    <title>we capture the moments</title>
+    <link rel="icon" href="images/dp-mini.png">
 </head>
 
 <body>
     <header>
         <nav>
-            <div class="navbar-main-logo">
-                <img src="" alt="">
-            </div>
-            <div class="navbar-main-button">
-                <div class="button-container">
-                    <ul>
-                        <li><a href="index.html">homepage</a></li>
-                        <li><a href="about.html">about</a></li>
+            <div class="navbar-main">
+                <div class="logo">
+                    <a href="index.html"> <img src="images/dp-big-logo1.png" alt="logo" /></a>
+                </div>
+                <div class="button">
+                    <ul class="button-container">
+                        <li><a href="index.html">visit homepage</a></li>
+                        <li><a href="about.html">read about us</a></li>
                     </ul>
+                    <div class="action" onclick="actionToggle();">
+                        <span>+</span>
 
-                    <nav class="navbar sticky-top navbar-light bg-light">
-                        <div class="container-fluid">
-                            <a class="navbar-brand" href="#">Sticky top</a>
-                        </div>
-                    </nav>
-
-                    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                        <div class="container-fluid">
-                            <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                                data-bs-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03"
-                                aria-expanded="false" aria-label="Toggle navigation">
-                                <span class="navbar-toggler-icon"></span>
-                            </button>
-                           
-                            <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
-                                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">home</a>
-                                    </li>
-                                    <li class="nav-item">
-                                        <a class="nav-link active" aria-current="page" href="#">about</a>
-                                    </li>
-
-                            </div>
-                        </div>
-                    </nav>
+                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">read about</li> -->
+                        <!-- <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on
+                                GitHub</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on
+                                Instagram</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on
+                                Codepen</li>
+                            <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on
+                                Linkedin</li> -->
+                    </div>
                 </div>
             </div>
         </nav>
     </header>
-    <div class="action" onclick="actionToggle();">
-        <span>+</span>
-        <ul>
-          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111392.svg" alt="" width="25px">Share on Facebook</li>
-          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111765.svg" alt="" width="25px">Share on VK</li>
-          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111432.svg" alt="" width="25px">Share on GitHub</li>
-          <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384031.svg" alt="" width="25px">Share on Instagram</li>
-          <li><img src="https://www.flaticon.com/svg/static/icons/svg/2111/2111341.svg" alt="" width="25px">Share on Codepen</li>
-          <li><img src="https://www.flaticon.com/svg/static/icons/svg/1384/1384030.svg" alt="" width="25px">Share on Linkedin</li>
-        </ul>
-      </div>
-      
+
+    <main>
+        <section>
+            <div class="first-section">
+                <div class="first-section-heading-container">
+                    <h1>Welcome here, pal</h1>
+                </div>
+                <div class="first-section-image-container">
+                    <img src="./images/15.jpg" alt="image" />
+                    <!-- <img src="./images/9.JPG" alt="image" /> -->
+                </div>
+                <div class="first-section-paragraph-container">
+                    <h2>
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Laborum quis rerum earum repellat quisquam consectetur ut amet, rem tempora nulla exercitationem perferendis nesciunt, adipisci dicta et dolores labore eius recusandae?
+                    </h2>
+                </div>
+            </div>
+            <div class="second-section">
+                <div class="second-section-content-organizer">
+                    <div class="second-section-first-image-desc-container">
+                        <img src="./images/20.JPG" alt="image" />
+
+                        <div class="second-section-first-desc-container">
+                            <div>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
+                                </p>
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class="second-section-second-image-desc-container">
+                        <div class="second-section-second-desc-container">
+                            <div>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
+                                </p>
+                            </div>
+                        </div>
+                        <img src="./images/3.JPG" alt="image" />
+                    </div>
+                </div>
+                <div class="second-section-paragraph-container">
+                    <h3>
+                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquid sunt asperiores amet illum inventore ut eos natus vel, similique ducimus minima doloremque neque. Esse necessitatibus consequuntur animi impedit, earum numquam! Lorem ipsum dolor sit amet
+                        necessitatibus consequuntur animi impedit, earum numquam!
+
+                    </h3>
+                </div>
+            </div>
+            <div class="third-section">
+                <div class="third-section-image-container">
+                    <div>
+                        <img src="./images/6.JPG" alt="image" />
+                    </div>
+                    <div>
+                        <img src="./images/10.JPG" alt="image" />
+                    </div>
+                    <div>
+                        <img src="./images/13.jpg" alt="image" />
+                    </div>
+                    <div>
+                        <img src="./images/background-about-1.jpg" alt="image" />
+                    </div>
+
+                </div>
+
+
+                <div class="third-section-image-desc-container">
+
+                    <div class="third-section-image-desc-sub-container">
+                        <img src="./images/21.JPG" alt="image" />
+                        <div class="third-section-desc-container">
+                            <div>
+                                <p>
+                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. Earum optio illum dolorem quia, unde incidunt, ratione esse voluptatibus officiis atque quae id quisquam dolor eveniet doloremque aperiam inventore cupiditate eaque?
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <div class="footer-main">
+            <div class="footer-text-container">
+                <div>
+                    <p>Made by David Pitra</p>
+                </div>
+                <div>
+                    <p>© 2022 - <span>All rights reserved</span> </p>
+                </div>
+            </div>
+
+        </div>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="./scripts/index.js"></script>
     <!-- Option 2: Separate Popper and Bootstrap JS -->
     <!--
