--- a/about.html
+++ b/about.html
@@ -25,11 +25,6 @@
                             <li><a href="about.html">read about us</a></li>
                         </ul>
                     </div>
-                    <!-- <div class="action" onclick="actionToggle();">
-                        <span>+</span>
-                        <li><a href="index.html">visit homepage</a></li>
-                        <li><a href="about.html">read about us</a></li>
-                    </div> -->
                 </div>
             </div>
         </nav>
@@ -100,7 +95,7 @@
                     <p>Made by David Pitra</p>
                 </div>
                 <div>
-                    <p>© 2022 - <span>All rights reserved</span> </p>
+                    <p>© 2022 - <a href="https://www.zakonyprolidi.cz/cs/2000-121">All rights reserved</a></p>
                 </div>
             </div>
         </div>
